bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var (fini): Boolean =false
^